tests/baselines/reference/parserForOfStatement21.errors.txt
//// [tests/cases/conformance/parser/ecmascript6/Iterators/parserForOfStatement21.ts] ////

parserForOfStatement21.ts(1,9): error TS1123: Variable declaration list cannot be empty.


==== parserForOfStatement21.ts (1 errors) ====
    for (var of of) { }
            
!!! error TS1123: Variable declaration list cannot be empty.